fix: updated the css to hide scrollbars

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -121,3 +121,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
